@@ -1085,3 +1085,6 @@
 2025-09-02 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up enforcement of the 'Schedule Programs' and 'Add Remarks'
 	permissions in 'Manage Affiliates' in davit(1).
+2025-09-02 Fred Gleason <fredg@paravelsystems.com>
+	* Tweaked the 'List Users' dialog to disable the 'Edit' and 'Delete'
+	buttons when no user entry was selected in davit(1).
